Added new recipe image

--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Falafel</h1>
+    <img src="images/delifel.jpg" alt="delicious looking falafel balls">
+    
+    <p>Is a deep-fried ball of Egyptian origin, featuring in Middle Eastern cuisine, particularly Levantine cuisines.</p>
     <h2>Ingredients:</h2>
-    <p><ul>
+    <ul>
         <li>2 cups dried chickpeas</li>
         <li>1/2 tbs baking soda</li>
         <li>1 cup fresh parsley leaves</li>
@@ -17,6 +20,15 @@
         <li>2 tbs tahini</li>
         <li>1 tbs ground cumin</li>
         <li>salt to taste</li>
-    </ul></p>
+    </ul>
+    <h2>Recipe instructions:</h2>
+    <ol>
+        <li>Soak your dried chickpeas overnight or for at least 8 to 12 hours.</li>
+        <li>Add all the ingredients to a food processor. I recommend roughly chopping up the onion, herbs and pepper before adding. Pulse the food processor but do not blend completely. The final mixture should resemble coarse sand.
+</li>
+        <li>Transfer the mixture to a bowl then add the chickpea flour and baking soda, stir it together until it is fully combined and cover with plastic wrap or a lid.</li>
+        <li>Place the bowl in the fridge. Chill the falafel mixture for 30 minutes to 1 hour.</li>
+        <li>Shape your falafel. You can do this by hand or with a cookie scoop and then deep fry it at 175°C.</li>
+    </ol>
 </body>
 </html>
