Updated all the recipes and added the rest of the images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-      <h1 id="header">Odin Recipes</h1>
+      <h1 id="header">Odin Recipes ♡</h1>
       <img src="images/bakery-girl.jpg" alt="a cute chef">
       <h3 id="image label">A collection of my favorite recipes ^_^</h3>
       <div>
