--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Falafel</title>
 </head>
 <body>
     <h1>Falafel</h1>
-    <img src="images/delifel.jpg" alt="delicious looking falafel balls">
+    <img src="../images/delifel.jpg" alt="delicious looking falafel balls" width="500" height="400">
     
-    <p>Is a deep-fried ball of Egyptian origin, featuring in Middle Eastern cuisine, particularly Levantine cuisines.</p>
+<p>Is a deep-fried ball of Egyptian origin, featuring in Middle Eastern cuisine, particularly Levantine cuisines.</p>
     <h2>Ingredients:</h2>
     <ul>
         <li>2 cups dried chickpeas</li>
@@ -30,5 +30,6 @@
         <li>Place the bowl in the fridge. Chill the falafel mixture for 30 minutes to 1 hour.</li>
         <li>Shape your falafel. You can do this by hand or with a cookie scoop and then deep fry it at 175°C.</li>
     </ol>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
