--- a/recipes/mici.html
+++ b/recipes/mici.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mici</title>
 </head>
 <body>
-    
+    <h1>Mici</h1>
+    <img src="../images/mititei.jpg" alt="grilled meat" width="600" height="400">
+    <p>Is a dish from Romanian cuisine, consisting of grilled ground meat rolls made from a mixture of beef and lamb with spices.</p>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>500 g ground beef</li>
+        <li>500 g ground lamb</li>
+        <li>180 ml beef stock</li>
+        <li>50 ml beer</li>
+        <li>1 tbs soda bicarbonate</li>
+        <li>1 tbs salt</li>
+        <li>1/2 ground pepper</li>
+        <li>1/2 tbs coriander powder</li>
+        <li>1/2 tbs ground cumin</li>
+    </ul>
+    <h2>Recipe instructions:</h2>
+    <ol>
+        <li>Place the meat into a bowl. In a larger mug, mix the beef stock with beer, soda bicarbonate, spices, salt pepper and give it a good stir until the salt has dissolved entirely.</li>
+        <li>Add this liquid mixture to the meat and mix really well until the mixture becomes almost a paste.</li>
+        <li>You can now work with a dash of oil or water to form the sausages into their shapes.</li>
+        <li>Transfer the open sausages to the fridge to rest for 2 to 4 hours but you can leave them overnight too.</li>
+        <li>Place them onto a hot, hot grill or in a hot pan and cook them on each side for no longer than 4 min.</li>
+    </ol>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
