--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hummus</title>
 </head>
 <body>
-   
+   <h1>Hummus</h1>
+   <img src="../images/yummus.jpg" alt="hummus with some olive oil and chickpeas" width="500" height="400">
+   <p>Is a very popular Middle Eastern cuisine, usually eaten as a dip, with pita bread.</p>
+   <h2>Ingredients:</h2>
+<ul>
+    <li>Cooked chickpeas</li>
+    <li>Tahini 1/3 cup</li>
+    <li>Parsley</li>
+    <li>Lemon juice</li>
+    <li>Extra-virgin olive oil 2 tbs</li>
+    <li>Garlic</li>
+    <li>Salt, cumin powder</li>
+</ul>
+<h2>Recipe instructions:</h2>
+<ol>
+    <li>Peel the chickpeas after cooking them and then add them to the blender.</li>
+    <li>Add all the ingredients to the blender and blend until it reaches a smooth consistency.</li>
+    <li>Cover and refrigerate the hummus for an hour or so before serving.</li>
+    <li>Transfer to a serving bowl and add a generous drizzle of good extra virgin olive oil. Add a few chickpeas to the middle, if you like. Sprinkle sumac on top.</li>
+</ol>
+<a href="../index.html">Return to main page</a>
 </body>
 </html>
